<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    tools:context="com.example.mdsouza5.hw6stopwatch.MainActivity">

    <ImageView
        android:id="@+id/imageviewiitMA"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:paddingBottom="20dp"
        android:src="@drawable/iit_sat_stack_186_blk" />

    <TextView
        android:id="@+id/exampleofservicesMA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eg_services"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@id/imageviewiitMA" />

    <Button
        android:id="@+id/startServicesMA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_services_btn_text"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exampleofservicesMA" />

    <Button
        android:id="@+id/startButtonMA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_btn_text"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/startServicesMA" />

    <Button
        android:id="@+id/stopButtonMA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_btn_text"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@id/startButtonMA"
        app:layout_constraintTop_toBottomOf="@id/startServicesMA" />

    <Button
        android:id="@+id/resetButtonMA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_btn_text"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@id/stopButtonMA"
        app:layout_constraintTop_toBottomOf="@id/startServicesMA" />

</android.support.constraint.ConstraintLayout>
